--- a/asset/style.css
+++ b/asset/style.css
@@ -5,8 +5,77 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.pb-50{
+    padding-bottom: 50px !important;
+}
+.pt-50{
+    padding-top: 50px !important;
+}
+
+
+.title-top{
+    text-align: center;
+    text-transform: capitalize;
+    margin-bottom: 10px;
+    font-size: 25px;
+    line-height: 30px;
+    font-weight: 600;
+    color: #f53626;
+}
+.title-bot{
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 48px;
+    text-transform: capitalize;
+    color: #000c04;
+    text-align: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 .number {
-    display: flex;
     background-color: #189A46;
-    flex-wrap: wrap;
+    padding: 48px 0;
+}
+.number-content{
+    justify-content: space-around;
+    display: flex;
+}
+.number-item{
+    width: 25%;
+    text-align: center;;
+}
+.number-item h4{
+    font-size: 20px;
+    line-height: 25px;
+    text-transform: capitalize;
+    color: #fff;
+    margin-top: 10px;
+    opacity: 0.8;
+    font-weight: 400;
+}
+.number-item p {
+    font-size: 50px;
+    line-height: 60px;
+    font-weight: 600;
+    color: #fff;
+    margin-top: 30px;
+    margin-bottom: 0;
+}
+
+.plan{
+    background-color: rgba(147, 107, 232, 0.05);
 }
