--- a/asset/style.css
+++ b/asset/style.css
@@ -15,6 +15,9 @@
 .pt-50{
     padding-top: 50px !important;
 }
+.pd-100{
+    padding-bottom: 100px;
+}
 .mg-50{
     margin: -50px 0 !important;
 }
@@ -90,11 +93,6 @@
 
 
 
-
-
-
-
-
 .number {
     background-color: #189A46;
     padding: 48px 0;
@@ -135,7 +133,7 @@
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap:  5px;
-    padding: 0 70px;
+    padding: 0 50px;
 }
 .card-item{
     border-radius: 8px;
@@ -209,4 +207,17 @@
 }
 button:hover{
     background-color: #116E32;
+}
+
+.title-video h6{
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: uppercase;
+    line-height: 2em;
+    letter-spacing: 1px;
+    margin-bottom: -4px;
+}
+.title-video p {
+    text-align: center;
+    margin-top: -30px;
 }
