--- a/asset/style.css
+++ b/asset/style.css
@@ -53,11 +53,12 @@ a.read:hover {
     font-weight: 600;
     line-height: 48px;
 }
-.mt-3
+.mt-3,
 .my-3 {
     margin-top: 1rem !important
 }
-.mb-3 {
+.mb-3,
+.my-3 {
     margin-bottom: 1rem !important
 }
 .mg-t-50 {
@@ -71,6 +72,25 @@ a.read:hover {
 }
 .mt-4, .my-4 {
     margin-top: 1.5rem !important; 
+}
+.pb-5, .py-5 {
+    padding-bottom: 3rem !important;
+}
+.pt-5, .py-5 {
+    padding-top: 3rem !important;
+}
+.pb-3, .py-3 {
+    padding-bottom: 1rem !important;
+}
+.pt-3, .py-3 {
+    padding-top: 1rem !important;
+}
+.img-fluid {
+    max-width: 100%;
+    height: auto;
+}
+.mt-2, .my-2 {
+    margin-top: 0.5rem !important;
 }
 
 p {
@@ -291,7 +311,7 @@ transition: all 0.5s;
 .feature__icon i {
     font-size: 30px;
 }
-.feature .card-title {
+.feature  .card-title {
     text-decoration:none;
     font-size: 24px;
     font-weight: 600;
@@ -300,6 +320,7 @@ transition: all 0.5s;
     display: block;
     color: #000c04;
 }
+
 .feature .card-title:hover {
     color: #189a46;
     text-decoration: none;
