--- a/asset/style.css
+++ b/asset/style.css
@@ -1056,3 +1056,28 @@ q::before {
 .subscribe-wthree button {
     flex-basis: 27%;
 }
+
+
+.backToTop {
+    width: 60px;
+    height: 60px;
+    background: #189A46;
+    border-radius: 8px;
+    line-height: 60px;
+    text-align: center;
+    display: block;
+    position: fixed;
+    right: 25px;
+    bottom: 100px;
+    color: #fff;
+    transition: all .2s;
+
+    opacity: 0;
+    overflow: hidden;
+    border-radius: 50px;
+    transition: 0.3s ease-out;
+}
+.cd-top--is-visible {
+    visibility: visible;
+    opacity: 1;
+  }
