--- a/asset/respon.css
+++ b/asset/respon.css
@@ -74,6 +74,14 @@
   .testimonial-item {
     margin-bottom: 30px;
   }
+  .updated .subscribe-wthree-field {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+  }
+  .updated__content input {
+    flex-basis: 100%;
+  }
   }
   
   @media (min-width: 992px) & (max-width: 1199px) {
@@ -210,10 +218,7 @@
     .d-md-flex {
       display: flex !important;
   }
-  .subscribe-wthree-field {
-    display: flex;
-    justify-content: space-between;
-}
+
   }
   
   @media (min-width: 576px) & (max-width: 767px) {
@@ -236,6 +241,12 @@
       grid-gap: 20px;
       margin-top: 40px;
     }
+    .subscribe-wthree button {
+      flex-basis: 100%;
+      display: block;
+      width: 100%;
+      margin-top: 16px;
+    }
   }
   @media (max-width: 767px) {
     .whoWeAre .whoWeAre__right-grids {
@@ -257,7 +268,6 @@
       top: 18%;
       width: 70% !important
   }
-  .subscribe-wthree-field {
-    display: block;
-  }
+
+ 
   }
