--- a/asset/respon.css
+++ b/asset/respon.css
@@ -82,6 +82,10 @@
   .updated__content input {
     flex-basis: 100%;
   }
+
+  .btn-sun-moon{
+    margin: -430px 0px 0px 740px;
+  }
   }
   
   @media (min-width: 992px) & (max-width: 1199px) {
